web-infras/parser/tests/fixtures/babel/es2017/async-functions/35/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,15)
1|const foo = { async = true };
 |             ^
